Added new columns for extra data

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
 
 body {
   background: #121620 !important;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', 'san-serif';
 }
 
 .App-logo {
